--- a/requirements.txt
+++ b/requirements.txt
@@ -1,39 +1,18 @@
-blinker==1.8.2
-certifi==2024.7.4
-charset-normalizer==3.3.2
-click==8.1.7
-contourpy==1.2.1
-cycler==0.12.1
-dash==2.17.1
+dash==2.0.0
 dash-core-components==2.0.0
 dash-html-components==2.0.0
+dash-renderer==2.0.0
 dash-table==5.0.0
-Flask==3.0.3
-fonttools==4.53.1
-idna==3.7
-importlib_metadata==8.0.0
-itsdangerous==2.2.0
-Jinja2==3.1.4
-kiwisolver==1.4.5
-MarkupSafe==2.1.5
-matplotlib==3.9.1
-nest-asyncio==1.6.0
-numpy==2.0.0
-packaging==24.1
-pandas==2.2.2
-pillow==10.4.0
-plotly==5.22.0
-pyparsing==3.1.2
-python-dateutil==2.9.0.post0
-pytz==2024.1
-requests==2.32.3
-retrying==1.3.4
-setuptools==70.2.0
+Flask==2.0.1
+Flask-Compress==1.10.1
+itsdangerous==2.0.1
+Jinja2==3.0.1
+MarkupSafe==2.0.1
+numpy==1.21.2
+pandas==1.3.3
+plotly==5.3.1
+python-dateutil==2.8.2
+pytz==2021.1
 six==1.16.0
-tenacity==8.5.0
-typing_extensions==4.12.2
-tzdata==2024.1
-urllib3==2.2.2
-Werkzeug==3.0.3
-zipp==3.19.2
-gunicorn==19.7.1
+tenacity==8.0.1
+Werkzeug==2.0.1
